tests/valid/struct/basic_literal.facet
struct Pair {
  x: unrestricted isize,
  y: unrestricted bool
}

fn main() -> unrestricted isize {
  let p: unrestricted Pair = Pair { x = 1, y = true };
  p.x
}
