tests/invalid/borrow_conflict/affine_field_move_while_shared_borrowed.facet
struct Box {
  x: affine isize,
  y: unrestricted bool
}

fn main() -> unrestricted bool {
  let p: affine Box = Box { x = 1, y = true };
  let r: unrestricted &affine isize = (&p.x) in
  let x: affine isize = p.x in
  (drop x);
  p.y
}
